k8s/joke-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: joke-service-deployment
  labels:
    app: joke-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: joke-service
  template:
    metadata:
      name: joke-service
      labels:
        app: joke-service
    spec:
      containers:
        - name: joke-service
          image: microservices-joke-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              protocol: TCP
      restartPolicy: Always
