k8s/auth-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-server-service
spec:
  selector:
    app: auth-server
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
