k8s/joke-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: joke-service-service
spec:
  selector:
    app: joke-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
