k8s/quote-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quote-service-service
spec:
  selector:
    app: quote-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
